[gd_scene load_steps=3 format=3 uid="uid://clrx38dg0oi78"]

[ext_resource type="Script" path="res://RouteFinder/Resource_RouteFinder.gd" id="3_wsjll"]
[ext_resource type="PackedScene" path="res://RouteFinder/Map/MapWindow.tscn" id="3_y7rk0"]

[node name="RouteFinder" type="Control"]
custom_minimum_size = Vector2(1350, 800)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_wsjll")

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1300, 800)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapWindow" parent="MarginContainer2" instance=ExtResource("3_y7rk0")]
layout_mode = 2

[connection signal="cleared" from="MarginContainer2/MapWindow" to="." method="_on_map_window_cleared"]
[connection signal="room_clicked" from="MarginContainer2/MapWindow" to="." method="roomClicked"]
[connection signal="room_info_displayed" from="MarginContainer2/MapWindow" to="." method="_on_map_window_room_info_displayed"]
[connection signal="room_removed" from="MarginContainer2/MapWindow" to="." method="roomRemoved"]
[connection signal="rooms_arranged" from="MarginContainer2/MapWindow" to="." method="roomsArranged"]
